--- a/templates/pages/visitor/welcome/index.html.twig
+++ b/templates/pages/visitor/welcome/index.html.twig
@@ -8,15 +8,17 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="fric-lumière, lomé, togo, services, " />
+  <meta name="description" content="Nous sommes une agence multi-services permettant de faciliter le quotidien des Togolais." />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
   <title> Fric Lumière - Agence Multi-Services </title>
 
   <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
   <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+
+  <link rel="canonical" href="https://fric-lumiere.com/" />
+  <link rel='shortlink' href='https://fric-lumiere.com/' />
 
   <!-- <link href="node_modules/lightbox2/dist/css/lightbox.css" rel="stylesheet" /> -->
 
@@ -46,7 +48,7 @@
 
         <div class="hero_bg_box">
             <div class="bg_img_box">
-                <img src="/images/hero-bg.png" alt="">
+                <img src="/images/hero-bg.png" alt="sweet waves">
             </div>
         </div>
 
@@ -54,7 +56,7 @@
         <header class="header_section">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="{{path('visitor.welcome.index')}}">
                     <img src="/images/fric-lumiere_logo (3).png" alt="">
                     <!-- <span>
                     Finexo
@@ -106,10 +108,10 @@
                                         Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
                                         </p> -->
                                         <div class="btn-box">
-                                            <a href="" class="btn1">
+                                            <a href="https://api.whatsapp.com/send/?phone=22893851784&text&type=phone_number&app_absent=0" class="btn1">
                                                 +228 93 85 17 84
                                             </a>
-                                            <a href="" class="btn1">
+                                            <a href="https://api.whatsapp.com/send/?phone=22822511373&text&type=phone_number&app_absent=0" class="btn1">
                                                 +228 22 51 13 73
                                             </a>
                                         </div>
@@ -123,60 +125,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="carousel-item ">
-                        <div class="container ">
-                        <div class="row">
-                            <div class="col-md-6 ">
-                            <div class="detail-box">
-                                <h1>
-                                Crypto <br>
-                                Currency
-                                </h1>
-                                <p>
-                                Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                                </p>
-                                <div class="btn-box">
-                                <a href="" class="btn1">
-                                    En savoir plus
-                                </a>
-                                </div>
-                            </div>
-                            </div>
-                            <div class="col-md-6">
-                            <div class="img-box">
-                                <img src="images/slider-img.png" alt="">
-                            </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container ">
-                        <div class="row">
-                            <div class="col-md-6 ">
-                            <div class="detail-box">
-                                <h1>
-                                Crypto <br>
-                                Currency
-                                </h1>
-                                <p>
-                                Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                                </p>
-                                <div class="btn-box">
-                                <a href="" class="btn1">
-                                    En savoir plus
-                                </a>
-                                </div>
-                            </div>
-                            </div>
-                            <div class="col-md-6">
-                            <div class="img-box">
-                                <img src="images/slider-img.png" alt="">
-                            </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div> -->
                 </div>
                 {# <ol class="carousel-indicators">
                 <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
@@ -211,7 +159,7 @@
     </section>
     <!-- end client section -->
 
-    <section id="services_section" class="service_section layout_padding">
+    <section id="services_section" class="service_section">
         <div class="service_container">
         <div class="container ">
             <div class="heading_container heading_center">
@@ -226,7 +174,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/transfer_icon.png" alt="" class="">
+                    <img src="/images/transfer_icon.png" alt="Transfert d'argent">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -240,22 +188,22 @@
                     </a>
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">TRANSFERT D'ARGENT</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-                        </div>
-                        </div>
-                    </div>
+                      <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                          <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">TRANSFERT D'ARGENT</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                              </button>
+                          </div>
+                          <div class="modal-body">
+                              ...
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                          </div>
+                          </div>
+                      </div>
                     </div>
                 </div>
                 </div>
@@ -263,7 +211,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/travel_icon.png" alt="">
+                    <img src="/images/travel_icon.png" alt="Agence de voyage">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -281,7 +229,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/realestate2_icon.png" alt="">
+                    <img src="/images/realestate2_icon.png" alt="Agence immobilière">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -301,7 +249,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/douanes.png" alt="" class="">
+                    <img src="/images/douanes.png" alt="DÉCLARANT EN DOUANES">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -319,7 +267,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/buysell_icon.png" alt="">
+                    <img src="/images/buysell_icon.png" alt="ACHAT ET VENTE">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -337,7 +285,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/rental_icon.png" alt="">
+                    <img src="/images/rental_icon.png" alt="LOCATION DE BIENS">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -357,7 +305,7 @@
             <div class="col-md-4 ">
                 <div class="box ">
                 <div class="img-box h-100">
-                    <img src="/images/assurance.png" alt="" class="">
+                    <img src="/images/assurance.png" alt="ASSURANCES">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -373,11 +321,6 @@
                 </div>
             </div>
             </div>
-            <!-- <div class="btn-box">
-            <a href="">
-                View All
-            </a>
-            </div> -->
         </div>
         </div>
     </section>
@@ -392,9 +335,9 @@
         <div class="row">
             <div class="col-md-6">
               <div class="h-100 d-flex flex-column justify-content-around">
-                  <h3 class="text-center">
+                  <p class="">
                       Nous formons une équipe de professionels disposant d’une grande expérience dans les divers services offerts au Togo et au niveau régional et international. 
-                  </h3>
+                  </p>
                   <div class="d-flex justify-content-around align-items-center">
                     <ul class="list-unstyled">
                         <li><i class="text-gold fa-solid fa-check-double"></i> PROFESSIONNALISME</li>
@@ -405,18 +348,18 @@
                         <li><i class="text-gold fa-solid fa-check-double"></i> DISPONIBILITÉ</li>
                     </ul>
                   </div>
-                  <h3 class="text-center">
+                  <p class="">
                     Nos agents qualifiés vous épargneront des dépenses et de votre temps précieux.
-                  </h3>
-                  <div class="detail-box">
-                    <a href="">Remplissez le formulaire</a>
-                    <a href="">Ecrivez-nous sur Whatsapp</a>
+                  </p>
+                  <div class="detail-box my-lg-3">
+                    <a href="{{path('visitor.welcome.index')}}#contact_form_section">Remplissez le formulaire</a>
+                    <a href="https://api.whatsapp.com/send/?phone=22893851784&text&type=phone_number&app_absent=0">Ecrivez-nous sur Whatsapp</a>
                   </div>
               </div>
             </div>
             <div class="col-md-6 ">
               <div class="img-box">
-                  <img class="img-fluid rounded" src="/images/about1.jpg" alt="">
+                  <img class="img-fluid rounded" src="/images/about1.jpg" alt="Qui sommes-nous?">
               </div>
             </div>
         </div>
@@ -425,20 +368,17 @@
 
     <!-- about section -->
     <section id="contact_section" class="about_section layout_padding" style="-webkit-border-bottom-right-radius: 120px;
--webkit-border-bottom-left-radius: 120px;
--moz-border-radius-bottomright: 120px;
--moz-border-radius-bottomleft: 120px;
-border-bottom-right-radius: 120px;
-border-bottom-left-radius: 120px;">
+        -webkit-border-bottom-left-radius: 120px;
+        -moz-border-radius-bottomright: 120px;
+        -moz-border-radius-bottomleft: 120px;
+        border-bottom-right-radius: 120px;
+        border-bottom-left-radius: 120px;">
         <div class="container  ">
-        <div class="heading_container heading_center">
-            <h2>
-            Contactez-<span>nous</span>
-            </h2>
-            <!-- <p>
-            Magni quod blanditiis non minus sed aut voluptatum illum quisquam aspernatur ullam vel beatae rerum ipsum voluptatibus
-            </p> -->
-        </div>
+          <div class="heading_container heading_center">
+              <h2>
+              Contactez-<span>nous</span>
+              </h2>
+          </div>
         <div class="row">
             <div class="col-md-6 ">
               <div class="img-box">
@@ -465,8 +405,8 @@ border-bottom-left-radius: 120px;">
                 <p>
                 Email: friclumiere@gmail.com
                 </p>
-                <a href="">Remplissez le formulaire</a>
-                <a href="">Ecrivez-nous sur Whatsapp</a>
+                <a href="{{path('visitor.welcome.index')}}#contact_form_section">Remplissez le formulaire</a>
+                <a href="https://api.whatsapp.com/send/?phone=22893851784&text&type=phone_number&app_absent=0">Ecrivez-nous sur Whatsapp</a>
             </div>
             </div>
         </div>
@@ -756,20 +696,20 @@ border-bottom-left-radius: 120px;">
         <div class="col-md-6 col-lg-4 info_col">
           <div class="info_contact">
             <h4>
-              Addresse
+              Adresse
             </h4>
             <div class="contact_link_box">
-              <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
+              <a href="https://maps.app.goo.gl/sqMYq71svxCZV4Xs7">
                 <span>
                   <a href="https://maps.app.goo.gl/sqMYq71svxCZV4Xs7">
                     Quartier Attikoumé, 200m sur la voie longeant les rails vers l’agence Togocel et le pavé Djidjolé,
-                    Lomé
+                    Lomé, Togo.
                   </a>
                 </span>
               </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
+
+              <i class="my-3 fa fa-phone" aria-hidden="true"></i>
                 <p>
                   +228 93 85 17 84
                 </p>
@@ -783,12 +723,12 @@ border-bottom-left-radius: 120px;">
                   +228 22 50 92 17
                 </p>
               </a>
-              <a href="">
+              <div href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   friclumiere@gmail.com
                 </span>
-              </a>
+              </div>
             </div>
           </div>
           <div class="info_social">
@@ -950,7 +890,6 @@ border-bottom-left-radius: 120px;">
     <div class="container">
       <p>
         Copyright &copy; Fric lumière <span id="copyrightYear"></span>.</span>
-
       </p>
     </div>
   </section>
