Ajout d'animations Aos.

--- a/templates/pages/visitor/welcome/index.html.twig
+++ b/templates/pages/visitor/welcome/index.html.twig
@@ -147,7 +147,7 @@
               </div>
               <div class="row">
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/transfer_icon.png" alt="Transfert d'argent">
                       </div>
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/travel_icon.png" alt="Agence de voyage">
                       </div>
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/realestate2_icon.png" alt="Agence immobilière">
                       </div>
@@ -265,7 +265,7 @@
               </div>
               <div class="row">
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/douanes.png" alt="DÉCLARANT EN DOUANES">
                       </div>
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/buysell_icon.png" alt="ACHAT ET VENTE">
                       </div>
@@ -342,7 +342,7 @@
                     </div>
                 </div>
               <div class="col-md-4 ">
-                  <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                  <div class="box" data-aos="fade-right" data-aos-duration="2000">
                     <div class="img-box h-100">
                         <img src="/images/rental_icon.png" alt="LOCATION DE BIENS">
                     </div>
@@ -382,7 +382,7 @@
               </div>
               <div class="row">
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/w1.png" alt="ASSURANCES">
                       </div>
@@ -420,7 +420,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/s3.png" alt="ASSURANCES">
                       </div>
@@ -458,7 +458,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 ">
-                    <div class="box" data-aos="flip-left" data-aos-duration="2000">
+                    <div class="box" data-aos="fade-right" data-aos-duration="2000">
                       <div class="img-box h-100">
                           <img src="/images/w4.png" alt="ASSURANCES">
                       </div>
@@ -516,10 +516,10 @@
                     </p>
                     <div>
                       <ul class="list-unstyled">
-                          <li><span class="text-success">&#11166;</span> PROFESSIONNALISME</li>
-                          <li><span class="text-success">&#11166;</span> EXPÉRIENCE</li>
-                          <li><span class="text-success">&#11166;</span> FIABILITÉ</li>
-                          <li><span class="text-success">&#11166;</span> DISPONIBILITÉ</li>
+                          <li data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"><span class="text-success">&#11166;</span> PROFESSIONNALISME</li>
+                          <li data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"><span class="text-success">&#11166;</span> EXPÉRIENCE</li>
+                          <li data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"><span class="text-success">&#11166;</span> FIABILITÉ</li>
+                          <li data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"><span class="text-success">&#11166;</span> DISPONIBILITÉ</li>
                       </ul>
                     </div>
                     <p>
@@ -593,7 +593,7 @@
                 {{message}}
               </div>
             {% endfor %}
-            <h2 class="text-center my-3" data-aos="fade-right"
+            <h2 class="text-center my-3" data-aos="flip-down" data-aos="fade-right"
      data-aos-offset="300"
      data-aos-easing="ease-in-sine">Vous préférez remplir le formulaire ?</h2>
             {{form_start(form, {'action': path('visitor.welcome.index')~'#contact_form_section'})}}
