Ajout d'animations Aos.

--- a/templates/pages/visitor/welcome/index.html.twig
+++ b/templates/pages/visitor/welcome/index.html.twig
@@ -516,10 +516,10 @@
                     </p>
                     <div>
                       <ul class="list-unstyled">
-                          <li><span class="text-success">&#11166;</span> PROFESSIONNALISME</li>
-                          <li><span class="text-success">&#11166;</span> EXPÉRIENCE</li>
-                          <li><span class="text-success">&#11166;</span> FIABILITÉ</li>
-                          <li><span class="text-success">&#11166;</span> DISPONIBILITÉ</li>
+                          <li><span class="text-success">⮞</span> PROFESSIONNALISME</li>
+                          <li><span class="text-success">⮞</span> EXPÉRIENCE</li>
+                          <li><span class="text-success">⮞</span> FIABILITÉ</li>
+                          <li><span class="text-success">⮞</span> DISPONIBILITÉ</li>
                       </ul>
                     </div>
                     <p>
