Ajout d'animations Aos.

--- a/templates/pages/visitor/welcome/index.html.twig
+++ b/templates/pages/visitor/welcome/index.html.twig
@@ -515,11 +515,11 @@
                         Nous formons une équipe de professionnels disposant d’une grande expérience dans les divers services offerts au Togo et au niveau régional et international. 
                     </p>
                     <div>
-                      <ul class="list-unstyled">
-                          <li><span class="text-success">⮞</span> PROFESSIONNALISME</li>
-                          <li><span class="text-success">⮞</span> EXPÉRIENCE</li>
-                          <li><span class="text-success">⮞</span> FIABILITÉ</li>
-                          <li><span class="text-success">⮞</span> DISPONIBILITÉ</li>
+                      <ul>
+                          <li>PROFESSIONNALISME</li>
+                          <li>EXPÉRIENCE</li>
+                          <li>FIABILITÉ</li>
+                          <li>DISPONIBILITÉ</li>
                       </ul>
                     </div>
                     <p>
